@@ -31,6 +31,7 @@ Release 1.9.1 (2019-06-24)
 - fixed GH #2661: Poco::Zip::ZipArchive cannot load new tomcat.zip file
 - fixed GH #2700: Invalid read of memory in Poco::Environment::set which may cause crashes.
 - fixed GH #2712: File_WIN32.cpp(168): error C2065: “_upath”:Undeclared identifier
+- fixed GH #2723: Access violation when trying to decompress .zip file with unsupported compression method.
 
 
 Release 1.9.0 (2018-03-07)
